--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -14,13 +14,13 @@
 #
 # Use a descriptive name for your cluster:
 #
-# cluster.name: my-application
+ cluster.name: pinbot
 #
 # ------------------------------------ Node ------------------------------------
 #
 # Use a descriptive name for the node:
 #
-# node.name: node-1
+# node.name: ip-130
 #
 # Add custom attributes to the node:
 #
@@ -30,11 +30,11 @@
 #
 # Path to directory where to store the data (separate multiple locations by comma):
 #
-# path.data: /path/to/data
+ path.data: /data/elasticsearch/data
 #
 # Path to log files:
 #
-# path.logs: /path/to/logs
+ path.logs: /data/elasticsearch/logs
 #
 # ----------------------------------- Memory -----------------------------------
 #
